08_log_taps_traces/service1-envoy-jaeger.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    traffic_direction: INBOUND
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          tracing:
            verbose: true
            custom_tags:
            - tag: session-id
              request_header:
                name: "session-id"
                default_value: "missing"
            - tag: correlation-id
              request_header: 
                name: "correlation-id"
                default_value: "missing"
            provider:
              name: envoy.tracers.zipkin
              typed_config:
                "@type": type.googleapis.com/envoy.config.trace.v2.ZipkinConfig
                collector_cluster: jaeger
                collector_endpoint: "/api/v2/spans"
                shared_span_context: false
                collector_endpoint_version: HTTP_JSON
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: service1_route
            virtual_hosts:
            - name: service1
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: local_service
                decorator:
                  operation: checkAvailability
          http_filters:
          - name: envoy.filters.http.tap
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.tap.v3.Tap
              common_config:
                static_config:
                  match_config:
                    any_match: true
                  output_config:
                    sinks:
                      - file_per_tap:
                          path_prefix: /tmp/any/
          - name: envoy.filters.http.router
            typed_config: {}
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: "/dev/stdout"
              typed_json_format: 
                "@timestamp": "%START_TIME%"
                host:
                  hostname: "%HOSTNAME%"
                service:
                  name: "envoy"
                  version: "1.16"
                server:
                  address: "%UPSTREAM_HOST%"
                log:
                  level: "info"  # default envoy log level
                client:
                  address: "%DOWNSTREAM_REMOTE_ADDRESS%"
                user_agent:
                  name: "%REQ(USER-AGENT)%"
                http:
                  version: "%PROTOCOL%"
                  request:
                    method: "%REQ(:METHOD)%"
                    path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                    body:
                      bytes: "%BYTES_RECEIVED%"
                    duration: "%DURATION%"
                    duration_req: "%REQUEST_DURATION%"
                    headers:
                      accept: "%REQ(ACCEPT)%"
                      content-length: "%REQ(CONTENT-LENGTH)%"
                      content-type: "%REQ(CONTENT-TYPE)%"
                      host: "%REQ(HOST)%"
                      session-id: "%REQ(SESSION-ID)%"
                      correlation-id: "%REQ(CORRELATION-ID)%"
                      id: "%REQ(X-REQUEST-ID)%"
                      x_b3_traceid: "%REQ(X-B3-TRACEID)%"
                      x_b3_parentspanid: "%REQ(X-B3-PARENTSPANID)%"
                      x_b3_spanid: "%REQ(X-B3-SPANID)%"
                      x_forwarded_for: "%REQ(X-FORWARDED-FOR)%"
                  response:
                    body:
                      bytes: "%BYTES_SENT%"
                    headers:
                      access-control-allow-origin: "%RESP(ACCESS-CONTROL-ALLOW-ORIGIN)%"
                      content-length: "%RESP(CONTENT-LENGTH)%"
                      content-type: "%RESP(CONTENT-TYPE)%"
                      date: "%RESP(DATE)%"
                      server: "%RESP(SERVER)%"
                      status_code: "%RESPONSE_CODE%"
                envoy:
                  upstream:
                    cluster: "%UPSTREAM_CLUSTER%"
                    transport_failure_reason: "%UPSTREAM_TRANSPORT_FAILURE_REASON%"
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9000
    traffic_direction: OUTBOUND
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          tracing:
            provider:
              name: envoy.tracers.zipkin
              typed_config:
                "@type": type.googleapis.com/envoy.config.trace.v2.ZipkinConfig
                collector_cluster: jaeger
                collector_endpoint: "/api/v2/spans"
                shared_span_context: false
                collector_endpoint_version: HTTP_JSON
          codec_type: auto
          stat_prefix: egress_http
          route_config:
            name: service2_route
            virtual_hosts:
            - name: service2
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/trace/2"
                route:
                  cluster: service2
                decorator:
                  operation: checkStock
          http_filters:
          - name: envoy.filters.http.tap
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.tap.v3.Tap
              common_config:
                static_config:
                  match_config:
                    any_match: true
                  output_config:
                    sinks:
                      - file_per_tap:
                          path_prefix: /tmp/any/
          - name: envoy.filters.http.router
            typed_config: {}
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: "/dev/stdout"
              typed_json_format: 
                "@timestamp": "%START_TIME%"
                host:
                  hostname: "%HOSTNAME%"
                service:
                  name: "envoy"
                  version: "1.16"
                server:
                  address: "%UPSTREAM_HOST%"
                log:
                  level: "info"  # default envoy log level
                client:
                  address: "%DOWNSTREAM_REMOTE_ADDRESS%"
                user_agent:
                  name: "%REQ(USER-AGENT)%"
                http:
                  version: "%PROTOCOL%"
                  request:
                    method: "%REQ(:METHOD)%"
                    path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                    body:
                      bytes: "%BYTES_RECEIVED%"
                    duration: "%DURATION%"
                    duration_req: "%REQUEST_DURATION%"
                    headers:
                      accept: "%REQ(ACCEPT)%"
                      content-length: "%REQ(CONTENT-LENGTH)%"
                      content-type: "%REQ(CONTENT-TYPE)%"
                      host: "%REQ(HOST)%"
                      session-id: "%REQ(SESSION-ID)%"
                      correlation-id: "%REQ(CORRELATION-ID)%"
                      id: "%REQ(X-REQUEST-ID)%"
                      x_b3_traceid: "%REQ(X-B3-TRACEID)%"
                      x_b3_parentspanid: "%REQ(X-B3-PARENTSPANID)%"
                      x_b3_spanid: "%REQ(X-B3-SPANID)%"
                      x_forwarded_for: "%REQ(X-FORWARDED-FOR)%"
                  response:
                    body:
                      bytes: "%BYTES_SENT%"
                    headers:
                      access-control-allow-origin: "%RESP(ACCESS-CONTROL-ALLOW-ORIGIN)%"
                      content-length: "%RESP(CONTENT-LENGTH)%"
                      content-type: "%RESP(CONTENT-TYPE)%"
                      date: "%RESP(DATE)%"
                      server: "%RESP(SERVER)%"
                      status_code: "%RESPONSE_CODE%"
                envoy:
                  upstream:
                    cluster: "%UPSTREAM_CLUSTER%"
                    transport_failure_reason: "%UPSTREAM_TRANSPORT_FAILURE_REASON%"
  clusters:
  - name: local_service
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: local_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8080
  - name: service2
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: service2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service2
                port_value: 8000
  - name: jaeger
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: jaeger
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: jaeger
                port_value: 9411
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
